--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
+  provider: ^6.1.2
+  easy_localization: ^3.0.7
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
@@ -72,6 +75,7 @@ flutter:
   assets:
      - assets/images/
      - assets/files/
+     - assets/translations/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
